Fix emo nav spacing

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1828,6 +1828,7 @@ body[class*="viewing-timeline-fp"].small-screen .emotion-nav {
 	right: 0;
 	height: 20px;
 	font-size: 11px;
+	line-height: 24px;
 	margin-top: -#{$ui-mobile-emotion-nav-height}px;
 	background: rgb(255, 255, 255);
 	ul {
